# playground

./: .gitignore  404.html  LICENSE  README.md  ToDos.odt  elements.list  index.html  mkdocs.yml  sitemap.xml  snippets.txt
Algorithms/: TenToKnow.adoc
BashProgramming/: myfile.txt
BeProductive/: tools.txt
Bookshelf/: mkdocs.yml
Camunda/: start_postgres.sh
Cassandra/: README.md
CheatSheets/: mc.md  recursion.md  zsh.md
Digital/: half_adder.dig
Fun/: Sayings.txt
Go/: KillerApp.go
JavaCodingProblems/: README.md
JavaFX/: pom.xml
Jupyter/: Untitled.ipynb  mandelbrot.ipynb
Kata/: kata.md  katas.md
Python/: IrisExample.ipynb
TypeScript/: README.md  myfile.ts  typedarray.ts
_archive/arduino/blink_uno/: .gitignore  CMakeLists.txt  blink.cpp
_archive/arduino/blink_uno/cmake/toolchain/: flx.toolchain.cmake
admin-deploy/: service.yaml
alchemy/: README.md
americium/: README.md  package-lock.json  package.json
angular-test/: .gitignore  Dockerfile  package-lock.json  package.json
angular2-oauth2-tutorial/: pom.xml
arduino/attiny461/: CMakeLists.txt  README.md
arduino/attiny461/src/: hello.c
arduino/blink_cmake/: CMakeLists.txt  blink.c
arduino/blink_cmake/release/: Makefile  blink.elf  blink.hex
arduino/cuppaV3/: CMakeLists.txt
arduino/cuppaV3/cmake/: arduino_core.cmake
arduino/temp_demo/: CMakeLists.txt  temp.cpp
arsenium/: pom.xml
assembler/: hello.asm
assets/: chemical_elements.lst
awk/: directory.data  quotes.awk
aws_kms_key_encryption/: encrypt.txt
backup/: activate.sh  snippets.txt
backups/: mkdocs.yml
berkelium/: pom.xml
boing/: pom.xml
books/: flx_book_list.md
bookshelf/: README.md
calculator-service/: pom.xml
camunda/: mkdocs.yml
camunda-01/: Dockerfile
challenges/: Makefile  README.md
chatgpt_questions/: FootnotesInMarkdown.md
chemicals/: Makefile  README.md
coding-pg/: README.md
coding-playground-backup/: README.md
command-line-runner/: pom.xml
configury/: pom.xml
demo_1/: pom.xml
dev-ldap/: deployment.yaml  service.yaml  volume-claim.yaml
dev-ldap-admin/: deployment.yaml  service.yaml
dev-postgres/: deployment.yaml  service.yaml  volume-claim.yaml
discovery/: Dockerfile  build-and-deploy.sh  pom.xml
discovery-deploy/: deployment.yaml  service.yaml
docbbok/: article_entities.xml  myDocbook.epub
docbook/: mybook.xml
docker/: postgres.md
docs/: index.md
docu/: mkdocs.yml
effective-java/: pom.xml
elk/: service.yaml  service_02.yaml
elk-logz.io/: .gitignore
environmentVars/: pod.yaml
errors/: TimeOut.txt
frontend/: .gitignore  package-lock.json  pom.xml
gateway/: pom.xml
gh-pages/: README.md
gitserver/: Dockerfile
graalvm/: README.md
greeter/: pom.xml
guestbook/: project.clj
h2example/: pom.xml
hello-java/: pom.xml
hello-javafx/: pom.xml
helloworld/: Dockerfile  pom.xml
helloworld-deploy/: deployment.yaml
html/: test.html
hwsimple/: pom.xml
java-inheritance/: pom.xml
java-kata/: pom.xml
java-quickstart/: pom.xml
java-test/: pom.xml
(+3228 files in other folders)
